Percobaan border radius keenam

--- a/exercise-one/index.html
+++ b/exercise-one/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     
-    <div class="kotak"></div>
+    <div class="kotak">
+        <img src="https://source.unsplash.com/random/300x300" alt="">
+    </div>
 
 </body>
 </html>
