Percobaan Text Shadow Ketiga

--- a/exercise-five/index.html
+++ b/exercise-five/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
 
     <h1 class="title"> Hello World </h1>
-
     <h2 class="title-new"> Hello World </h2>
+    <h3 class="title-new-new"> Hello World </h3>
 
 </body>
 </html>
