--- a/exercise-eleven/index.html
+++ b/exercise-eleven/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     
-    
+    <div class="box"></div>
+    <p class="lorem">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt commodi quasi nam omnis nesciunt, assumenda nulla ipsam alias explicabo aliquid.
+    </p>
 
 </body>
 </html>
