--- a/exercise-twelve/index.html
+++ b/exercise-twelve/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     
-    
+    <div class="container">
+        <div class="box ease-box">ease</div>
+        <div class="box ease-in-box">ease-in</div>
+        <div class="box ease-out-box">ease-out</div>
+        <div class="box ease-in-out-box">ease-in-out</div>
+        <div class="box linear-box">linear</div>
+        <div class="box special-box">Special Box</div>
+    </div>
 
 </body>
 </html>
