--- a/exercise-fusion-one-to-twelve/index.html
+++ b/exercise-fusion-one-to-twelve/index.html
@@ -20,5 +20,17 @@
         </div>
     </section>
 
+    <section class="second-section">
+        <h1 class="second-section-title"> The Opacity Family </h1>
+        <div class="outer-boxes">
+            <div class="inner-boxes">
+                <div class="box-of-the-depth"></div>
+            </div>
+            <div class="new-inner-boxes">
+                <div class="box-of-the-new-depth"></div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
