RGBa and HSLa Mixup

--- a/exercise-fusion-one-to-twelve/index.html
+++ b/exercise-fusion-one-to-twelve/index.html
@@ -32,5 +32,17 @@
         </div>
     </section>
 
+    <section class="third-section">
+        <h1 class="third-section-title"> RGBa & HSLa </h1>
+        <div class="outer-box-color">
+            <div class="inner-boxes-color-one">
+                <div class="depth-boxes-color-one"></div>
+            </div>
+            <div class="inner-boxes-color-two">
+                <div class="depth-boxes-color-two"></div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
