Text Shadow Mixup

--- a/exercise-fusion-one-to-twelve/index.html
+++ b/exercise-fusion-one-to-twelve/index.html
@@ -53,5 +53,14 @@
         </div>
     </section>
 
+    <section class="fifth-section">
+        <h1 class="fifth-section-title"> The Text Shadows </h1>
+        <div class="text-shadow-container">
+            <h2 class="first-text-shadow"> The First Text Shadow </h2>
+            <h2 class="second-text-shadow"> The Second Text Shadow </h2>
+            <h2 class="third-text-shadow"> The Third Text Shadow </h2>
+        </div>
+    </section>
+
 </body>
 </html>
