Linear Gradient Mixup

--- a/exercise-fusion-one-to-twelve/index.html
+++ b/exercise-fusion-one-to-twelve/index.html
@@ -62,5 +62,14 @@
         </div>
     </section>
 
+    <div class="sixth-section">
+        <h1 class="sixth-section-title"> The Linear Gradients </h1>
+        <div class="linear-gradient-container">
+            <div class="first-linear-gradient box"></div>
+            <div class="second-linear-gradient box"></div>
+            <div class="third-linear-gradient box"></div>
+        </div>
+    </div>
+
 </body>
 </html>
