--- a/exercise-fusion-one-to-twelve/index.html
+++ b/exercise-fusion-one-to-twelve/index.html
@@ -62,14 +62,23 @@
         </div>
     </section>
 
-    <div class="sixth-section">
+    <section class="sixth-section">
         <h1 class="sixth-section-title"> The Linear Gradients </h1>
         <div class="linear-gradient-container">
             <div class="first-linear-gradient box"></div>
             <div class="second-linear-gradient box"></div>
             <div class="third-linear-gradient box"></div>
         </div>
-    </div>
+    </section>
+
+    <section class="seventh-section">
+        <h1 class="seventh-section-title"> The Radial Gradients </h1>
+        <div class="radial-gradient-container">
+            <div class="first-radial-gradient circle"></div>
+            <div class="second-radial-gradient circle"></div>
+            <div class="third-radial-gradient circle"></div>
+        </div>
+    </section>    
 
 </body>
 </html>
