--- a/exercise-fusion-one-to-twelve/index.html
+++ b/exercise-fusion-one-to-twelve/index.html
@@ -80,5 +80,14 @@
         </div>
     </section>    
 
+    <section class="eight-section">
+        <h1 class="eight-section-title"> The Filter </h1>
+        <div class="filter-container">
+            <img src="https://source.unsplash.com/random/200x200" alt="" class="first-filter-img box-img">
+            <img src="https://source.unsplash.com/random/200x200" alt="" class="second-filter-img box-img">
+            <img src="https://source.unsplash.com/random/200x200" alt="" class="third-filter-img box-img">
+        </div>
+    </section>
+
 </body>
 </html>
