--- a/exercise-fusion-one-to-twelve/index.html
+++ b/exercise-fusion-one-to-twelve/index.html
@@ -89,5 +89,15 @@
         </div>
     </section>
 
+    <section class="ninth-section">
+        <h1 class="ninth-section-title"> The Transform </h1>
+        <div class="transform-container">
+            <div class="first-box boxes"> The First Box </div>
+            <div class="second-box boxes"> The Second Box </div>
+            <div class="third-box boxes"> The Third Box </div>
+            <div class="fourth-box boxes"> The Fourth Box </div>
+        </div>
+    </section>
+
 </body>
 </html>
