--- a/exercise-fusion-one-to-twelve/index.html
+++ b/exercise-fusion-one-to-twelve/index.html
@@ -99,5 +99,15 @@
         </div>
     </section>
 
+    <section class="tenth-section">
+        <h1 class="tenth-section-title"> The Transition </h1>
+        <div class="transition-container">
+            <div class="first-box boxes"> 1 </div>
+            <div class="second-box boxes"> 2 </div>
+            <div class="third-box boxes"> 3 </div>
+            <div class="fourth-box boxes"> 4 </div>
+        </div>
+    </section>
+
 </body>
 </html>
