--- a/exercise-fusion-one-to-thirteen/index.html
+++ b/exercise-fusion-one-to-thirteen/index.html
@@ -109,5 +109,15 @@
         </div>
     </section>
 
+    <section class="eleventh-section">
+        <h1 class="eleventh-section-title"> The Animation </h1>
+        <div class="animation-container">
+            <div class="first-box boxes"> 1 </div>
+            <div class="second-box boxes"> 2 </div>
+            <div class="third-box boxes"> 3 </div>
+            <div class="fourth-box boxes"> 4 </div>
+        </div>
+    </section>
+
 </body>
 </html>
