membuat gallery part 3 ( overlay )

--- a/exercise-lightbox/index.html
+++ b/exercise-lightbox/index.html
@@ -16,10 +16,14 @@
 
         <ul class="gallery">
             <li>
-                <a href="">
+                <a href="#pictOne">
                     <img src="images/thumb/movie_making_thumb.jpg" alt="Movie Making Process">
                     <span> Movie Making </span>
                 </a>
+
+                <div class="overlay" id="pictOne">
+                    <img src="images/full/movie_making_full.jpg" alt="Movie Making Process">
+                </div>
             </li>
             
             <li>
