--- a/exercise-lightbox/index.html
+++ b/exercise-lightbox/index.html
@@ -22,6 +22,7 @@
                 </a>
 
                 <div class="overlay" id="pictOne">
+                    <a href="#" class="close">&times;</a>
                     <img src="images/full/movie_making_full.jpg" alt="Movie Making Process">
                 </div>
             </li>
